design : 커뮤니티 UI 디자인 변경#2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="walk_record_title">산책기록</string>
     <string name="today_walking_record">오늘 산책 기록</string>
     <string name="monthly_walking_record">이달의 산책 기록</string>
+    <string name="place_date_distinction">·</string>
 
 </resources>
