--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="monthly_walking_record">이달의 산책 기록</string>
 
     <string name="place_date_distinction">·</string>
+    <string name="category">카테고리</string>
 
 
 </resources>
