feat : 카테고리 chip에서  머티리얼 디자인 사이드 시트로 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
 
     <string name="place_date_distinction">·</string>
     <string name="category">카테고리</string>
+    <string name="search">검색</string>
+    <string name="search_hint">검색어를 입력해주세요</string>
 
 
 </resources>
