--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,5 @@
     <string name="mate_description">반려동물 산책 매칭 플랫폼</string>
     <string name="copyright">Copyright &#169; Petpal</string>
 
-
+    <string name="kakao_api_key">29842459a2117277a50ac661f2f7e089</string>
 </resources>
